--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: python
 python:
   - 2.7
 
+# install Java 8 as required by vnu.jar
 before_install:
   - sudo apt-get update
   - sudo apt-get install oracle-java8-installer
-  - sudo update-java-alternatives -s java-8-oracle # install Java 8 as required by vnu.jar
+  - sudo update-java-alternatives -s java-8-oracle
 
 install:
   - pip install html5validator
 
 script:
-  html5validator
+  - html5validator
